--- a/CONFIG.yaml
+++ b/CONFIG.yaml
@@ -2,7 +2,7 @@
 proxy-providers:
   PG_HOWDY:
     type: file
-    path: "./HOWDY.yaml"
+    path: "./providers/HOWDY.yaml"
     health-check:
       enable: true
       url: http://www.gstatic.com/generate_204
