--- a/CONFIG_NO_RULE.yaml
+++ b/CONFIG_NO_RULE.yaml
@@ -9,13 +9,13 @@ proxy-providers:
       interval: 10
 proxy-groups:
 - name: LOAD BALANCING
-  type: load-balance
-  strategy: round-robin
+  type: url-test
   disable-udp: false
   use:
   - PG_UMUM
   url: http://www.gstatic.com/generate_204
-  interval: '99'
+  interval: '10'
+  tolerance: '5'
 - name: PING TERKECIL
   type: url-test
   disable-udp: false
