--- a/proxy_provider/AKUNUMUM.yaml
+++ b/proxy_provider/AKUNUMUM.yaml
@@ -45,7 +45,7 @@ proxies:
   skip-cert-verify: true
 #31-07  
 - name: 🇸🇬 GR-CONTABO
-  server: contabo-sg.premium-server.xyz
+  server: contabo1.rockstartun.xyz
   port: 443
   type: vmess
   uuid: cc045af3-b6fa-4754-bbbf-b1efc626b4d6
@@ -66,7 +66,7 @@ proxies:
   cipher: auto
   network: grpc
   tls: true
-  servername: contabo-sg.premium-server.xyz
+  servername: contabo1.rockstartun.xyz
   skip-cert-verify: true
   grpc-opts:
     grpc-service-name: v2ray-vmess-grpc
